tree-sitter-mermaid/corpus/table_with_attr.txt
==================
table with attr
==================
erDiagram
 table2 {
  int attr
  int attr2
 }

---

(er_digram
  (statement
    (identifier)
    (attributes
      (attribute
        (identifier)
        (identifier))
      (attribute
        (identifier)
        (identifier)))))